# memspine

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  justfile  pyproject.toml
.github/workflows/: ci.yml
.planning/: ENHANCEMENT_PLAN_v0.2.md  INGEST-CONFLICTS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/intel/classifications/: ADR-000-template-3b8f1e7c.json  ADR-001-event-sourced-core-a1e3f9c7.json  ADR-002-slim-core-extras-4d5e8f2a.json  ADR-003-store-defaults-8e9f6c4d.json  ADR-004-ports-and-adapters-a4d004ee.json  ADR-005-background-execution-2c8f5a1e.json  ADR-006-config-layering-a6d0f3c1.json  ADR-007-public-oss-posture-2f3a8c1d.json  ADR-008-code-level-adoptions-3d8f9e2a.json  ADR-009-prompt-subsystem-3e6f0c4a.json  ADR-010-async-storage-driver-3d8f2a1c.json  ADR-011-event-log-retention-9c4b8f2e.json  ADR-012-httpx-core-3a4b1c2d.json  ADR-013-firewall-governance-amendments-e8f9a3b1.json  ADR-014-p5-lifecycle-amendments-3f8a2c1e.json  ADR-015-associative-links-adr015l6.json  ADR-016-prospective-shared-ad016c05.json  ADR-017-p7-infrastructure-1d4c9a7e.json  ADR-018-p7-review-hardening-a6e0e7a5.json  ADR-019-hybrid-retrieval-ad19b7e5.json  ADR-020-embedding-quantization-64c5f3d1.json  ADR-021-lancedb-core-vector-ad021c0e.json  ADR-022-shared-cache-backends-4f8a3c1d.json  ADR-023-pluggable-secrets-aws-b7e6a2c1.json  ADR-024-litellm-llm-embedding-89c4a1f7.json  ADR-025-postgres-storage-ad025pg1.json  ARCHITECTURE_FLOWS-a3f1c7d2.json  DEPENDENCY_ANALYSIS-6f3a1c8b.json  ECOSYSTEM_COMPARISON-c4f3a1e2.json  FEATURES-2a9d4f3c.json  PACKAGE-CATALOG-9f2a1c7b.json  README-d0c5ea11.json  RESEARCH-NOVELTY-4d3f9a1c.json  UNIMEM_V2_REWORK_PROPOSAL-6ba8f2c1.json  USAGE-a1c72c00.json  memspine-structure-plan-5f3a9c1e.json
.planning/phases/15-documentation-usage-finalization/: 15-CONTEXT.md  15-DISCUSSION-LOG.md
docs/: ARCHITECTURE_FLOWS.md  DEPENDENCY_ANALYSIS.md  ECOSYSTEM_COMPARISON.md  ECOSYSTEM_MEMORY_TAXONOMY.md  ECOSYSTEM_METHODOLOGY.md  ECOSYSTEM_PROMPTS.md  FEATURES.md  PACKAGE_CATALOG.md  README.md  RESEARCH_NOVELTY.md  UNIMEM_V2_REWORK_PROPOSAL.md  USAGE.md  memspine-structure-plan.md  mkdocs.yml
docs/adr/: ADR-000-template.md  ADR-001-event-sourced-core.md  ADR-002-slim-core-extras.md  ADR-003-store-defaults.md  ADR-004-ports-and-adapters.md  ADR-005-background-execution.md  ADR-006-config-layering.md  ADR-007-public-oss-posture.md  ADR-008-code-level-adoptions.md  ADR-009-prompt-subsystem.md  ADR-010-async-storage-driver.md  ADR-011-event-log-retention.md  ADR-012-httpx-core.md  ADR-013-firewall-governance-amendments.md  ADR-014-p5-lifecycle-amendments.md  ADR-015-associative-links.md  ADR-016-prospective-shared.md  ADR-017-p7-infrastructure.md  ADR-018-p7-review-hardening.md  ADR-019-hybrid-retrieval.md  ADR-020-embedding-quantization.md  ADR-021-lancedb-core-vector.md  ADR-022-shared-cache-backends.md  ADR-023-pluggable-secrets-aws.md  ADR-024-litellm-llm-embedding.md  ADR-025-postgres-storage.md  ADR-026-multi-call-write-pipeline.md  ADR-027-record-group-tags.md  ADR-028-community-leidenalg.md
docs/exports/: ECOSYSTEM_ALGORITHMS.csv  ECOSYSTEM_PACKAGE_ADOPTION.csv  ECOSYSTEM_PACKAGE_GAPS.csv  ECOSYSTEM_PROMPTS.csv  _rebuild_ecosystem_csvs.py  _rebuild_prompts_csv.py  _rebuild_prompts_hub.py
docs/survey/_staging/: _extract_to_staging.py  _merge_pass5_prompts.py  _repos.json
docs/survey/_staging/cognee/: PROMPTS.md
docs/survey/_staging/evermemos/: PROMPTS.md
docs/survey/_staging/graphiti/: PROMPTS.md
docs/survey/_staging/hindsight/: PROMPTS.md
examples/: 01_quickstart.py  02_working_memory_and_assembly.py  03_governance_firewall.py  04_prospective_shared_rest.py
src/memspine/: __init__.py  cli.py  engine.py  exceptions.py
src/memspine/clients/: __init__.py  base.py  cashews.py  http.py  kuzu.py  ladybug.py  lancedb.py  lmdb.py  postgres.py  redis.py  sqlite.py
src/memspine/config/: __init__.py  constants.py  loader.py  schema.py
src/memspine/core/: __init__.py  audit.py  erasure.py  events.py  firewall.py  namespace.py  projector.py  records.py  registry.py  replay.py
src/memspine/memories/: __init__.py  base.py
src/memspine/observability/: __init__.py  logging.py
src/memspine/prompts/: __init__.py  base.py  env.py  loader.py  models.py  optimize.py  registry.py  roles.py
src/memspine/protocols/: __init__.py
src/memspine/services/: __init__.py  base.py
src/memspine/workers/: __init__.py  dbos_runner.py  inline.py  pipelines.py  runner.py  schedule.py  scheduler.py  taskiq_runner.py
tests/: conftest.py
tests/combinations/: conftest.py  test_config_validate_golden.py  test_dedup_and_ingest_smoke.py  test_kitchen_sink.py  test_runner_boots.py  test_single_type_boots.py  test_template_boots.py
tests/integration/: conftest.py  test_concurrent_engines.py  test_dbos_crash_resume.py  test_erasure_persistence.py  test_event_log_modes.py  test_hybrid_and_quant_integration.py  test_persistence_lifecycle.py  test_runner_parity.py  test_storage_backends.py
tests/unit/: test_cli.py  test_docs_config_surface.py  test_engine.py  test_engine_e4.py  test_engine_group_tags.py  test_engine_hybrid.py  test_engine_p3.py  test_engine_p4.py  test_engine_p5.py  test_engine_p6.py  test_engine_p7.py  test_engine_p7b.py  test_engine_scheduler.py  test_engine_write_messages.py  test_reinforcement_on_read.py  test_smoke.py
tests/unit/clients/: test_sqlite_client.py
tests/unit/config/: test_loader.py
tests/unit/core/: test_audit.py  test_erasure.py  test_events.py  test_firewall.py  test_namespace.py  test_records.py  test_registry.py  test_replay.py
tests/unit/observability/: test_logging.py
tests/unit/prompts/: _contexts.py  test_harness.py  test_partials.py  test_prompts.py  test_selection.py
tests/unit/workers/: test_check_watches.py  test_extract_graph.py  test_lifecycle_pipelines.py  test_reorganize.py  test_scheduler.py  test_taskiq_runner.py  test_workers.py
(+239 files in other folders)
